// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`avatar > fallback 1`] = `
<div>
  <span
    class="group/avatar relative flex size-8 shrink-0 rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:border-border after:mix-blend-darken data-[size=lg]:size-10 data-[size=sm]:size-6 dark:after:mix-blend-lighten"
    data-size="default"
    data-slot="avatar"
  >
    <span
      class="flex size-full items-center justify-center rounded-full bg-muted text-sm text-muted-foreground group-data-[size=sm]/avatar:text-xs"
      data-slot="avatar-fallback"
    >
      VM
    </span>
  </span>
</div>
`;

exports[`avatar > group 1`] = `
<div>
  <div
    class="group/avatar-group flex -space-x-2 *:data-[slot=avatar]:ring-2 *:data-[slot=avatar]:ring-background"
    data-slot="avatar-group"
  >
    <span
      class="group/avatar relative flex size-8 shrink-0 rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:border-border after:mix-blend-darken data-[size=lg]:size-10 data-[size=sm]:size-6 dark:after:mix-blend-lighten"
      data-size="default"
      data-slot="avatar"
    >
      <span
        class="flex size-full items-center justify-center rounded-full bg-muted text-sm text-muted-foreground group-data-[size=sm]/avatar:text-xs"
        data-slot="avatar-fallback"
      >
        A
      </span>
    </span>
    <span
      class="group/avatar relative flex size-8 shrink-0 rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:border-border after:mix-blend-darken data-[size=lg]:size-10 data-[size=sm]:size-6 dark:after:mix-blend-lighten"
      data-size="default"
      data-slot="avatar"
    >
      <span
        class="flex size-full items-center justify-center rounded-full bg-muted text-sm text-muted-foreground group-data-[size=sm]/avatar:text-xs"
        data-slot="avatar-fallback"
      >
        B
      </span>
    </span>
    <span
      class="group/avatar relative flex size-8 shrink-0 rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:border-border after:mix-blend-darken data-[size=lg]:size-10 data-[size=sm]:size-6 dark:after:mix-blend-lighten"
      data-size="default"
      data-slot="avatar"
    >
      <span
        class="flex size-full items-center justify-center rounded-full bg-muted text-sm text-muted-foreground group-data-[size=sm]/avatar:text-xs"
        data-slot="avatar-fallback"
      >
        C
      </span>
    </span>
    <div
      class="relative flex size-8 shrink-0 items-center justify-center rounded-full bg-muted text-xs/relaxed text-muted-foreground ring-2 ring-background group-has-data-[size=lg]/avatar-group:size-10 group-has-data-[size=sm]/avatar-group:size-6 [&>svg]:size-4 group-has-data-[size=lg]/avatar-group:[&>svg]:size-5 group-has-data-[size=sm]/avatar-group:[&>svg]:size-3"
      data-slot="avatar-group-count"
    >
      +3
    </div>
  </div>
</div>
`;

exports[`avatar > large 1`] = `
<div>
  <span
    class="group/avatar relative flex size-8 shrink-0 rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:border-border after:mix-blend-darken data-[size=lg]:size-10 data-[size=sm]:size-6 dark:after:mix-blend-lighten"
    data-size="lg"
    data-slot="avatar"
  >
    <span
      class="flex size-full items-center justify-center rounded-full bg-muted text-sm text-muted-foreground group-data-[size=sm]/avatar:text-xs"
      data-slot="avatar-fallback"
    >
      LG
    </span>
  </span>
</div>
`;

exports[`avatar > small 1`] = `
<div>
  <span
    class="group/avatar relative flex size-8 shrink-0 rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:border-border after:mix-blend-darken data-[size=lg]:size-10 data-[size=sm]:size-6 dark:after:mix-blend-lighten"
    data-size="sm"
    data-slot="avatar"
  >
    <span
      class="flex size-full items-center justify-center rounded-full bg-muted text-sm text-muted-foreground group-data-[size=sm]/avatar:text-xs"
      data-slot="avatar-fallback"
    >
      SM
    </span>
  </span>
</div>
`;

exports[`avatar > withBadge 1`] = `
<div>
  <span
    class="group/avatar relative flex size-8 shrink-0 rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:border-border after:mix-blend-darken data-[size=lg]:size-10 data-[size=sm]:size-6 dark:after:mix-blend-lighten"
    data-size="default"
    data-slot="avatar"
  >
    <span
      class="flex size-full items-center justify-center rounded-full bg-muted text-sm text-muted-foreground group-data-[size=sm]/avatar:text-xs"
      data-slot="avatar-fallback"
    >
      VM
    </span>
    <span
      class="absolute right-0 bottom-0 z-10 inline-flex items-center justify-center rounded-full bg-primary text-primary-foreground bg-blend-color ring-2 ring-background select-none group-data-[size=sm]/avatar:size-2 group-data-[size=sm]/avatar:[&>svg]:hidden group-data-[size=default]/avatar:size-2.5 group-data-[size=default]/avatar:[&>svg]:size-2 group-data-[size=lg]/avatar:size-3 group-data-[size=lg]/avatar:[&>svg]:size-2"
      data-slot="avatar-badge"
    />
  </span>
</div>
`;
